[tool.poetry]
name = "hash-table"
version = "0.1.0"
description = ""
authors = ["andreatamburri <andrea.tamburri@flixbus.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^8.3.2"
pytest-unordered = "^0.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

